fixed mistake on scss file

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -18,7 +18,7 @@
   }
 
   @if $val == 'desktop' {
-    @media screen and (min-width: map-get($map: $screen-sizes, $key: desktop)) {
+    @media screen and (min-width: map-get($map: $screen-sizes, $key: 'desktop')) {
       @content;
     }
   }
